--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ project:
 # These variables define the book contents - adjust them as necessary
 book:
   # [A] BOOK TITLE
-  title: "THE TITLE OF THE BOOK"
+  title: "BM214 workshop 1"
   reader-mode: true
   
   # The cover image and favicon; these may not need to be changed
@@ -17,36 +17,32 @@ book:
   # [B] FOOTER TEXT
   page-footer:
     left: |
-      THIS IS A SHORT PIECE OF FOOTER TEXT NAMING THE BOOK/AUTHORS
+      This workshop was written by Dr Leighton Pritchard and Dr Morgan Feeney
     right: |
       This book was built with <a href="https://quarto.org/">Quarto</a>.
 
   # Sets the URL for the repository
   # [C] GITHUB REPOSITORY URL
-  repo-url: https://github.com/sipbs-compbiol/REPOSITORY
+  repo-url: https://github.com/mafeeney/BM214workshop1
   repo-branch: main
   repo-actions: [edit, issue]
 
   # Sets author information and publication/presentation date
   # [D] AUTHOR INFORMATION AND PUBLICATION/PRESENTATION DATE
-  author: "AUTHOR NAME"
-  date: "DD/MM/YY"
+  author: "Leighton Pritchard and Morgan Feeney"
+  date: "01/02/2026"
 
   # Define chapters and sections here
   # [E] CHAPTERS AND SECTIONS
   chapters:
     - index.qmd
-    - intro.qmd
+    - overview.qmd
+    - PrimerDesign.qmd
+    - PCRapplications.qmd
+    - CaseStudy1.qmd
+    - CaseStudy2.qmd
+    - CaseStudy3.qmd
 
-    - part: early-section.qmd
-      chapters: 
-        - early-section-topic.qmd
-    
-    - part: late-section.qmd
-      chapters: 
-        - webr-example.qmd
-    
-    - references.qmd
 
 # Location of BibTeX format reference file; may not need to be changed
 bibliography: references.bib
@@ -109,3 +105,4 @@ custom-callout:
 
 filters:
   - custom-callout
+  - naquiz
